--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         </activity>
 
 
-        <activity android:name=".ViewPagerTest" >
+        <activity android:name=".ViewPagerTestActivity" >
 
         </activity>
     </application>
