--- a/canblock/build.gradle
+++ b/canblock/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.library'
 
+version = "1.0.0"
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    resourcePrefix "canblock"
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 23
@@ -22,4 +24,17 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:appcompat-v7:23.0.1'
+
 }
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
+    }
+}
+apply from: 'https://raw.githubusercontent.com/msdx/gradle-publish/master/bintray.gradle'
