--- a/gradle.properties
+++ b/gradle.properties
@@ -16,15 +16,16 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# ./gradlew bintrayUpload
 
 PROJ_GROUP=com.canyinghao
-PROJ_VERSION=1.0.0
+PROJ_VERSION=1.0.1
 PROJ_NAME=canblock
 PROJ_WEBSITEURL=https://github.com/canyinghao/CanBlock
 PROJ_ISSUETRACKERURL=
 PROJ_VCSURL=git@github.com:canyinghao/CanBlock.git
 PROJ_DESCRIPTION=android block helper
-PROJ_ARTIFACTID=com-canyinghao-canblock
+PROJ_ARTIFACTID=canblock
 
 DEVELOPER_ID=canyinghao
 DEVELOPER_NAME=canyinghao
